# system_explorer

./: CMakeLists.txt  addresses.json  readme.md
client_app/: CMakeLists.txt  client_app.cpp
include/nlohmann/: json.hpp
server_app/: CMakeLists.txt  server_app.cpp
socket/: CMakeLists.txt  client_socket.cpp  client_socket.h  server_socket.cpp  server_socket.h
system_manager/: CMakeLists.txt  address.h  system_manager.cpp  system_manager.h
test_system/: CMakeLists.txt  test_system.cpp
